--- a/.github/workflows/kb_sdk_test.yaml
+++ b/.github/workflows/kb_sdk_test.yaml
@@ -1,63 +1,28 @@
-name: KBase SDK Tests
+name: KBase SDK Test
 
 on:
   push:
-    branches:
-    - master
-    - main
   pull_request:
-    branches:
-    - master
-    - main
-    - develop
-  workflow_dispatch:
 
 jobs:
-
-  sdk_tests:
+  test:
     runs-on: ubuntu-latest
+
     steps:
+      - uses: actions/checkout@v4
 
-    - name: Check out GitHub repo
-      if: "!contains(github.event.head_commit.message, 'skip ci')"
-      uses: actions/checkout@v2
+      - name: Setup kb-sdk
+        run: |
+          mkdir -p $(pwd)/bin
+          docker run ghcr.io/kbase/kb_sdk_patch-develop:br-0.0.4 genscript > $(pwd)/bin/kb-sdk
+          chmod 755 $(pwd)/bin/kb-sdk
+          echo "$(pwd)/bin" >> $GITHUB_PATH
 
-    - name: Check out Actions CI files
-      if: "!contains(github.event.head_commit.message, 'skip ci')"
-      uses: actions/checkout@v2
-      with:
-        repository: 'kbaseapps/kb_sdk_actions'
-        path: 'kb_sdk_actions'
+      - name: Setup test config
+        env:
+          KBASE_TEST_TOKEN: ${{ secrets.KBASE_TEST_TOKEN }}
+        run: |
+          sed -i "s/^test_token=.*$/test_token=$KBASE_TEST_TOKEN/g" ./test_local/test.cfg
 
-
-    - name: Set up test environment
-      if: "!contains(github.event.head_commit.message, 'skip ci')"
-      shell: bash
-      env:
-        KBASE_TEST_TOKEN: ${{ secrets.KBASE_TEST_TOKEN }}
-      run: |
-        # Verify kb_sdk_actions clone worked
-        test -f "$HOME/kb_sdk_actions/bin/kb-sdk" && echo "CI files cloned"
-        # Pull kb-sdk & create startup script
-        docker pull kbase/kb-sdk
-       
-        sh $GITHUB_WORKSPACE/kb_sdk_actions/bin/make_testdir && echo "Created test_local"
-        test -f "test_local/test.cfg" && echo "Confirmed config exists"
-
-    - name: Configure authentication
-      if: "!contains(github.event.head_commit.message, 'skip ci')"
-      shell: bash
-      env:
-        KBASE_TEST_TOKEN: ${{ secrets.KBASE_TEST_TOKEN }}
-      run: |
-        # Add token to config
-        sed -ie "s/^test_token=.*$/&$KBASE_TEST_TOKEN/g" ./test_local/test.cfg
-
-    - name: Run tests
-      if: "!contains(github.event.head_commit.message, 'skip ci')"
-      shell: bash
-      env:
-        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-      run: |
-        sh $GITHUB_WORKSPACE/kb_sdk_actions/bin/kb-sdk test
-        bash <(curl -s https://codecov.io/bash)
+      - name: Run tests
+        run: kb-sdk test
